# ckb-zkp

./: .gitignore  .prettierrc  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README-ckb.md  README-zkp.md  README.md  capsule.toml  deployment.toml  zkp-toolkit.md
asvc/: Cargo.toml
asvc/src/: lib.rs  test.rs
asvc/tests/: test.rs
bench-tests/: Cargo.toml
bulletproofs/: Cargo.toml
bulletproofs/src/: arithmetic_circuit.rs  inner_product_proof.rs  lib.rs
bulletproofs/tests/: mini.rs
ckb-contracts/: Cargo.toml  capsule.toml
ckb-contracts/bench-tests/: Cargo.toml
ckb-contracts/bench-tests/src/: lib.rs  tests.rs
ckb-contracts/contracts/mini_bulletproofs_verifier/: Cargo.toml
ckb-contracts/contracts/mini_clinkv2_ipa_verifier/: Cargo.toml
ckb-contracts/contracts/mini_clinkv2_kzg10_verifier/: Cargo.toml
ckb-contracts/contracts/mini_hyrax_zk_linear_gkr_verifier/: Cargo.toml
ckb-contracts/contracts/mini_libra_zk_linear_gkr_verifier/: Cargo.toml
ckb-contracts/contracts/universal_groth16_verifier/: Cargo.toml
ckb-contracts/contracts/universal_marlin_verifier/: Cargo.toml
ckb-contracts/contracts/universal_plonk_verifier/: Cargo.toml
ckb-contracts/contracts/universal_spartan_nizk_verifier/: Cargo.toml
ckb-contracts/contracts/universal_spartan_snark_verifier/: Cargo.toml
ckb-contracts/docker/: Dockerfile
cli/: Cargo.toml  README.md
cli/proofs_files/: README.md.mimc_proof  README.md.proof  mimc_proof
cli/src/: main.rs  setup.rs  zkp_prove.rs  zkp_verify.rs
cli/src/circuits/: hash.rs  mini.rs  mod.rs
cli/src/trusted_setup/: main.rs  mimc.rs  mini.rs  range.rs
clinkv2/: Cargo.toml
clinkv2/examples/: mimc_ipa.rs  mimc_kzg10.rs
clinkv2/src/: lib.rs
clinkv2/src/ipa/: ipa.rs  mod.rs  prover.rs  verifier.rs
clinkv2/src/kzg10/: kzg10.rs  mod.rs  prover.rs  verifier.rs
clinkv2/src/r1cs/: constraint_system.rs  error.rs  impl_constraint_var.rs  mod.rs
clinkv2/tests/: mini.rs
contracts/bulletproofs-verifier/: Cargo.toml
contracts/bulletproofs-verifier/src/: error.rs  main.rs
contracts/ckb-zkp/: Cargo.toml  zkp-toolkit RESIDES HERE.
contracts/ckb-zkp/.cargo/: config
contracts/ckb-zkp/src/: main.rs
contracts/mini_clinkv2_ipa_verifier/: Cargo.toml
contracts/mini_clinkv2_ipa_verifier/src/: entry.rs
contracts/universal_spartan_snark_verifier/: Cargo.toml
curve/: Cargo.toml
curve/src/: lib.rs
curve/src/curve25519/: group.rs
curve/src/mnt4_753/: mod.rs
curve/src/tests/: curves.rs  fields.rs  groups.rs  mod.rs  msm.rs
curve25519/: Cargo.toml
curve25519/src/: fr.rs  group.rs  lib.rs
examples/: Cargo.toml  args.rs  mimc-zkp.rs  mimc.rs  mini.rs  range.rs
examples/src/: main.rs  mini.rs
examples/src/asvc/: bls12_381_asvc.rs  bn_256_asvc.rs  mod.rs
examples/src/merkletree/: merkle_tree_mimc.rs  merkle_tree_sha256.rs
examples/src/rescue/: rescue_spartan.rs
examples/src/spartan/: spartan_nizk.rs  spartan_snark.rs
examples/trusted-setup/: args.rs  mimc.rs
examples/zkp-prove/: args.rs  main.rs  mimc.rs
examples/zkp-verify/: main.rs
gadgets/: Cargo.toml  README.md
gadgets/examples/: merkle_tree_mimc.rs  merkle_tree_sha256.rs  poseidon.rs  poseidon_clinkv2.rs  rescue_clinkv2.rs  rescue_groth16.rs  rescue_spartan.rs
gadgets/src/: lib.rs  test_constraint_system.rs
gadgets/src/algebra/: boolean.rs  fr.rs  mod.rs  uint32.rs
gadgets/src/commitment/: mod.rs  poseidon.rs  rescue.rs
gadgets/src/hashes/: abstract_hash.rs  blake2s.rs  mimc.rs  sha256.rs
gadgets/src/lookup/: table.rs
gadgets/src/merkletree/: cbmt_constraints.rs
gadgets/src/operator/: mod.rs  multieq.rs  rangeproof.rs
groth16/: Cargo.toml
groth16/src/: generator.rs  lib.rs  prover.rs  r1cs_to_qap.rs  verifier.rs
groth16/tests/: mini.rs
hyrax/: Cargo.toml
hyrax/src/: circuit.rs  commitment.rs  evaluate.rs  hyrax_proof.rs  lib.rs  params.rs  test.rs  zk_sumcheck_proof.rs
hyrax/tests/: mini.rs  test.rs  test_2.rs
marlin/: Cargo.toml
marlin/src/: data_structures.rs  errors.rs  fs_rng.rs  lib.rs
marlin/src/ahp/: arithmetic.rs  constraint_systems.rs  indexer.rs  mod.rs  prover.rs  verifier.rs
marlin/src/pc/: data_structures.rs  kzg10.rs  mod.rs
marlin/tests/: mini.rs
math/: Cargo.toml  LICENSE-APACHE
math/math-derive/: Cargo.toml  LICENSE-MIT
math/math-derive/src/: lib.rs
math/src/: bytes.rs  error.rs  groups.rs  lib.rs  rand.rs  to_field_vec.rs
math/src/biginteger/: macros.rs  mod.rs
math/src/curves/: mod.rs
math/src/fft/: domain.rs  evaluations.rs  mod.rs
math/src/fields/: macros.rs  mod.rs
math/src/msm/: fixed_base.rs  mod.rs  variable_base.rs
math/src/serialize/: error.rs  flags.rs  mod.rs
math/tests/: fft.rs
plonk/: .rustfmt.toml  Cargo.toml
plonk/src/: constraint_system.rs  data_structures.rs  error.rs  errors.rs  lib.rs  plonk.rs  rng.rs  utils.rs
plonk/src/ahp/: evaluations.rs  mod.rs  prover.rs  verifier.rs
plonk/src/composer/: abstract_hash.rs  arithmetic.rs  boolean.rs  logic.rs  mimc.rs  mod.rs  permutation.rs  range.rs  selector.rs  selectors.rs  synthesize.rs
plonk/src/constraint_system/: arithmetic.rs  mod.rs
plonk/src/keygen/: arithmetic.rs  mod.rs  permutation.rs
plonk/src/poly_protocol/: prover.rs  verifier.rs
plonk/src/protocol/: mod.rs  prover.rs  verifier.rs
r1cs/: Cargo.toml
r1cs/src/: constraint_system.rs  error.rs  impl_lc.rs  lib.rs
scheme/: Cargo.toml
scheme/src/: lib.rs
scheme/tests/: mimc-clinkv2.rs  mimc.rs  mini.rs  poseidon.rs  rescue-clinkv2.rs  rescue.rs
spartan/: Cargo.toml
spartan/src/: commitments.rs  data_structure.rs  inner_product.rs  lib.rs  polynomial.rs  prover.rs  r1cs.rs  setup.rs  spark.rs  test.rs  verify.rs
spartan/tests/: mini.rs  test.rs
tests/: Cargo.toml
tests/proofs_files/: mimc.groth16-bls12_381.proof  mimc.groth16-bn_256.proof
tests/src/: tests.rs
tests/trusted_setup/: mimc-groth16-bls12_381.vk  mimc-groth16-bn_256.vk
zkp-toolkit/: Cargo.toml  README.md
zkp-toolkit/cli/: Cargo.toml  README.md
zkp-toolkit/curve/: Cargo.toml
zkp-toolkit/examples/: Cargo.toml
zkp-toolkit/scheme/: Cargo.toml
zkp-toolkit/src/: lib.rs
(+525 files in other folders)
