[package]
name = "zkp"
version = "0.1.0"
authors = ["SECBIT Labs"]
description = "A library for better use zero-knowledge proof"
keywords = ["cryptography", "zero-knowledge", "zkp", "gadget", "r1cs"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2018"

[workspace]
members = [
    "math",
    "curve",
    "scheme"
]

[[bin]]
path = "src/bin/zkp_prove.rs"
name = "zkp-prove"

[[bin]]
path = "src/bin/zkp_verify.rs"
name = "zkp-verify"

[features]
default = ["full"]
full = ["parallel", "bn_256", "bls12_381", "groth16", "bulletproofs"]
parallel = ["std", "math/parallel", "curve/parallel", "scheme/parallel"]
std = ["math/std", "curve/std", "scheme/std"]
bn_256 = ["curve/bn_256"]
bls12_381 = ["curve/bls12_381"]
groth16 = ["scheme/groth16"]
bulletproofs = ["scheme/bulletproofs"]

[dependencies]
math = { path = "math", default-features = false }
scheme = { path = "scheme", default-features = false }
curve = { path = "curve", default-features = false }
rand = { version = "0.7", default-features = false }

[dev-dependencies]
rand = { version = "0.7" }
