[package]
name = "ckb-zkp"
version = "0.1.0"
authors = ["SECBIT Labs"]
description = "A library for better use zero-knowledge proof"
keywords = ["cryptography", "zero-knowledge", "zkp", "gadget", "r1cs"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2018"

[workspace]
members = [
    "math",
    "curve",
    "scheme",
    #"cli",
    "tests",
]
exclude = [
    "contracts",
    "dependencies",
]


[features]
default = ["full"]
full = ["parallel", "gadgets", "bn_256", "bls12_381", "groth16", "bulletproofs", "marlin", "clinkv2", "spartan"]
parallel = ["std", "math/parallel", "curve/parallel", "scheme/parallel"]
std = ["math/std", "curve/std", "scheme/std"]
gadgets = []
bn_256 = ["curve/bn_256"]
bls12_381 = ["curve/bls12_381"]
groth16 = ["scheme/groth16"]
bulletproofs = ["scheme/bulletproofs"]
marlin = ["scheme/marlin"]
clinkv2 = ["scheme/clinkv2"]
spartan = ["scheme/spartan"]


[dependencies]
math = { path = "math", default-features = false }
curve = { path = "curve", default-features = false }
scheme = { path = "scheme", default-features = false }
rand = { version = "0.7", default-features = false }
byteorder = { version = "1", default-features = false }

[dev-dependencies]
rand = "0.7"
blake2s_simd = "0.5"
num-traits = { version = "0.2", default-features = false }
hex-literal = "0.2"
sha2 = "0.9"

[profile.test]
opt-level = 3
