[package]
name = "zkp-asvc"
version = "0.1.0"
authors = ["SECBIT Labs"]
description = "a zero-knowledge proof scheme: asvc."
keywords = ["cryptography", "zkp", "zero-knowledge", "asvc"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = ["std"]
std = ["zkp-curve/std", "zkp-r1cs/std", "ark-ff/std", "ark-std/std"]
parallel = ["std", "rayon", "zkp-curve/parallel", "zkp-r1cs/parallel", "ark-ff/parallel", "ark-std/parallel"]

[dependencies]
rand = { version = "0.7", default-features = false }
rayon = { version = "1", optional = true }
zkp-curve = { version = "0.1", path = "../curve", default-features = false }
zkp-r1cs = { version = "0.1", path = "../r1cs", default-features = false }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false }

[dev-dependencies]
ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["curve"] }
