[package]
name = "tests"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.7"
postcard = { version = "0.5", default-features = false, features = ["alloc"] }
blake2 = { version = "0.8", default-features = false }
ckb-zkp = { path = "../zkp-toolkit" }
ckb-tool = "0.2.2"
ckb-testtool = "0.2.2"

