[package]
name = "zkp-bulletproofs"
version = "0.1.0"
authors = ["SECBIT Labs"]
description = "a zero-knowledge proof scheme: bulletproofs."
keywords = ["cryptography", "zkp", "zero-knowledge"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = ["parallel"]
std = ["ark-ff/std", "ark-std/std"]
parallel = ["std", "rayon", "ark-ff/parallel", "ark-std/parallel"]

[dependencies]
zkp-r1cs = { version = "0.1", path = "../r1cs" }
zkp-curve = { version = "0.1", path = "../curve" }
smallvec = "1.6"
merlin = { version = "2.0", default-features = false }
rand = { version = "0.7", default-features = false }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
rayon = { version = "1", optional = true }

[dev-dependencies]
ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["curve"] }
