[workspace]
members = [
    "contracts/universal_groth16_verifier",
    "contracts/universal_marlin_verifier",
    "contracts/universal_spartan_nizk_verifier",
    "contracts/universal_spartan_snark_verifier",
    "contracts/mini_bulletproofs_verifier",
    "contracts/mini_clinkv2_ipa_verifier",
    "contracts/mini_clinkv2_kzg10_verifier",
]

[profile.release]
# set debug-assertions to true to enable debug macro.
# debug-assertions = true
overflow-checks = true
lto = true
opt-level = "z"
codegen-units = 1
panic = 'abort'

[profile.dev]
overflow-checks = true
lto = true
opt-level = "s"
codegen-units = 16
debug = 0