[package]
name = "zkp-cli"
version = "0.1.0"
authors = ["SECBIT Labs"]
description = "A cli toolkit for zkp use."
keywords = ["cryptography", "cli", "zkp"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2018"

[[bin]]
path = "src/zkp_verify.rs"
name = "zkp-verify"

[[bin]]
path = "src/zkp_prove.rs"
name = "zkp-prove"

[[bin]]
path = "src/setup.rs"
name = "setup"

[dependencies]
rand = "0.7"
serde_json = "1"
sha2 = "0.9"
blake2 = "0.9"

ark-ff = { version = "0.2", default-features = false }
ark-poly = {version = "0.2", default-features = false }
ark-serialize = { version = "0.2", default-features = false, features = [ "derive" ] }
ark-std = { version = "0.2", default-features = false }
ark-bls12-381 = { version = "0.2", default-features = false, features = [ "curve" ] }

zkp-r1cs = { version = "0.1", path = "../r1cs"}
zkp-curve = { version = "0.1", path = "../curve"}
zkp-curve25519 = { version = "0.1", path = "../curve25519"}
zkp-groth16 = { version = "0.1", path = "../groth16" }
zkp-bulletproofs = { version = "0.1", path = "../bulletproofs" }
# zkp-clinkv2 = { version = "0.1", path = "../clinkv2" }
zkp-spartan = { version = "0.1", path = "../spartan" }
zkp-marlin = { version = "0.1", path = "../marlin" }
zkp-asvc = { version = "0.1", path = "../asvc" }
zkp-libra = { version = "0.1", path = "../libra" }
zkp-hyrax = { version = "0.1", path = "../hyrax" }
zkp-gadgets = { version = "0.1", path = "../gadgets" }
