[package]
name = "zkp-clinkv2"
version = "0.1.0"
authors = ["SECBIT Labs"]
description = "a zero-knowledge proof scheme: clinkv2."
keywords = ["cryptography", "zkp", "zero-knowledge", "clinkv2"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = ["std"]
std = ["zkp-curve/std", "ark-ff/std", "ark-std/std"]
parallel = ["std", "rayon", "zkp-curve/parallel", "ark-ff/parallel", "ark-std/parallel"]

[dependencies]
smallvec = "1.6"
merlin = { version = "2.0", default-features = false }
rand = { version = "0.7", default-features = false }
rayon = { version = "1", optional = true }
derivative = { version = "2", features = ["use_core"] }
digest = { version = "0.9", default-features = false }
zkp-curve = { version = "0.1", path = "../curve", default-features = false }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features = ["derive"] }
ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }

[dev-dependencies]
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["curve"] }
blake2 = { version = "0.9" }
rand = { version = "0.7" }
