[package]
name = "zkp-curve"
version = "0.1.0"
authors = ["SECBIT Labs"]
description = "a general zkp curve trait."
keywords = ["cryptography", "zkp", "zero-knowledge"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = ["std"]
std = ["ark-ff/std", "ark-ec/std"]
parallel = ["std", "ark-ff/parallel", "ark-ec/parallel"]

[dependencies]
ark-ff = { version = "0.2", default-features = false }
ark-ec = { version = "0.2", default-features = false }
