[package]
name = "example"
version = "0.1.0"
authors = ["SECBIT Labs"]
description = "implementation of the different zero-knowledge proof system schemes"
keywords = ["asvc", "clinkv2", "marlin", "spartan", "mimc", "hyrax", "libra"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2018"


[dependencies]
ckb-zkp = { path = "..", default-features = true}
math = { path = "../math", default-features = false }
curve = { path = "../curve", default-features = false }
rand = { version = "0.7", default-features = false }
rand_core = { version = "0.5", default-features = false }
postcard = { version = "0.5", default-features = false, features = ["alloc"] }
scheme = { path = "../scheme", default-features = false, features = ["asvc", "groth16", "spartan", "hyrax"]}
sha2 = "0.9"
blake2 = { version = "0.8", default-features = false }

[dev-dependencies]
csv = { version = "1" }
rand = { version = "0.7" }
blake2 = { version = "0.8", default-features = false }
curve = { path = "../curve", default-features = false, features = [ "bls12_381", "bn_256", "sw6", "baby_jubjub","curve25519"] }
postcard = { version = "0.5", default-features = false, features = ["alloc"] }

[[bin]]
name = "mini"
path = "src/mini.rs"

[[bin]]
name = "asvc"
path = "src/scheme/asvc/asvc.rs"

[[bin]]
name = "spartan_nizk"
path = "src/scheme/spartan/spartan_nizk.rs"

[[bin]]
name = "spartan_snark"
path = "src/scheme/spartan/spartan_snark.rs"

[[bin]]
name = "merkletree_mimc"
path = "src/circuit/merkletree/merkle_tree_mimc.rs"

[[bin]]
name = "merkletree_sha256"
path = "src/circuit/merkletree/merkle_tree_sha256.rs"

[[bin]]
name = "poseidon"
path = "src/circuit/poseidon/poseidon.rs"

[[bin]]
name = "poseidon_clinkv2"
path = "src/circuit/poseidon/poseidon_clinkv2.rs"

[[bin]]
name = "rescue_groth16"
path = "src/circuit/rescue/rescue_groth16.rs"

[[bin]]
name = "rescue_spartan"
path = "src/circuit/rescue/rescue_spartan.rs"

[[bin]]
name = "rescue_clinkv2"
path = "src/circuit/rescue/rescue_clinkv2.rs"

[[bin]]
name = "mimc_clinkv2_ipa"
path = "src/scheme/clinkv2/mimc_clinkv2_ipa.rs"

[[bin]]
name = "libra_linear_gkr"
path = "src/scheme/libra/libra_linear_gkr.rs"

[[bin]]
name = "libra_zk_linear_gkr"
path = "src/scheme/libra/libra_zk_linear_gkr.rs"

[[bin]]
name = "hyrax_zk_parallel_gkr"
path = "src/scheme/hyrax/hyrax_zk_parallel_gkr.rs"

[[bin]]
name = "mimc_clinkv2_kzg10"
path = "src/scheme/clinkv2/mimc_clinkv2_kzg10.rs"

[[bin]]
name = "marlin_mimc"
path = "src/scheme/marlin/marlin_mimc.rs"
