[package]
name = "zkp-examples"
version = "0.1.0"
authors = ["SECBIT Labs"]
description = "implementation of the different zero-knowledge proof system schemes"
keywords = ["asvc", "clinkv2", "marlin", "spartan", "mimc", "hyrax", "libra"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
rand = "0.7"
sha2 = "0.9"
blake2 = "0.9"

ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
ark-std = { git = "https://github.com/arkworks-rs/utils" }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves" }

zkp-r1cs = { version = "0.1", path = "../r1cs"}
zkp-curve = { version = "0.1", path = "../curve"}
zkp-curve25519 = { version = "0.1", path = "../curve25519"}
zkp-groth16 = { version = "0.1", path = "../groth16" }
zkp-bulletproofs = { version = "0.1", path = "../bulletproofs" }
zkp-clinkv2 = { version = "0.1", path = "../clinkv2" }
zkp-spartan = { version = "0.1", path = "../spartan" }
zkp-marlin = { version = "0.1", path = "../marlin" }
zkp-libra = { version = "0.1", path = "../libra" }
zkp-hyrax = { version = "0.1", path = "../hyrax" }
zkp-gadgets = { version = "0.1", path = "../gadgets" }

[[bin]]
name = "merkletree_mimc"
path = "src/circuit/merkletree/merkle_tree_mimc.rs"

[[bin]]
name = "merkletree_sha256"
path = "src/circuit/merkletree/merkle_tree_sha256.rs"

[[bin]]
name = "poseidon"
path = "src/circuit/poseidon/poseidon.rs"

[[bin]]
name = "poseidon_clinkv2"
path = "src/circuit/poseidon/poseidon_clinkv2.rs"

[[bin]]
name = "rescue_groth16"
path = "src/circuit/rescue/rescue_groth16.rs"

[[bin]]
name = "rescue_spartan"
path = "src/circuit/rescue/rescue_spartan.rs"

[[bin]]
name = "rescue_clinkv2"
path = "src/circuit/rescue/rescue_clinkv2.rs"