[package]
name = "zkp-marlin"
version = "0.1.0"
authors = ["SECBIT Labs"]
description = "a zero-knowledge proof scheme: marlin."
keywords = ["cryptography", "zkp", "zero-knowledge", "marlin"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = ["std"]
std = ["zkp-r1cs/std", "ark-ff/std", "ark-std/std", "ark-ec/std", "ark-poly/std"]
parallel = ["std", "rayon", "zkp-r1cs/parallel", "ark-ff/parallel", "ark-std/parallel", "ark-ec/parallel", "ark-poly/parallel"]

[dependencies]
rand = { version = "0.7", default-features = false }
rayon = { version = "1", optional = true }
merlin = { version = "2.0", default-features = false }
rand_chacha = { version = "0.2", default-features = false }
zkp-r1cs = { version = "0.1", path = "../r1cs", default-features = false }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features = ["derive"] }
ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }

[dev-dependencies]
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["curve"] }
