[package]
name = "zkp-plonk"
version = "0.1.0"
authors = ["SECBIT Labs"]
description = "a zero-knowledge proof scheme: PlonK."
keywords = ["cryptography", "zkp", "zero-knowledge", "polnk"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = ["std"]
std = ["ark-ff/std"]
parallel = ["std", "rayon", "ark-ff/parallel"]

[dependencies]
rand = { version = "0.7", default-features = false }
rayon = { version = "1", optional = true }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }

[dev-dependencies]
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["curve"] }
