[package]
name = "plonk"
version = "0.1.0"
authors = ["SECBIT Labs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["ark-ff/std", "ark-std/std", "ark-ec/std", "ark-poly/std"]
parallel = ["std", "rayon", "ark-ff/parallel", "ark-std/parallel", "ark-ec/parallel", "ark-poly/parallel"]

[dependencies]
rayon = { version = "1", optional = true }
merlin = { version = "2.0", default-features = false }
rand_core = { version = "0.5"}
rand_chacha = { version = "0.2", default-features = false }
digest= { version = "0.9.0", default-features = false }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features = ["derive"] }
ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }
ark-poly-commit = {git = "https://github.com/arkworks-rs/poly-commit", default-features = false }

# [dev-dependencies]
blake2 = { version = "0.9", default-features = false }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["curve"] }
