[package]
name = "zkp-plonk"
version = "0.1.0"
authors = ["SECBIT Labs"]
description = "a zero-knowledge proof scheme: plonk."
keywords = ["cryptography", "zkp", "zero-knowledge", "plonk"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = ["std"]
std = ["ark-ff/std", "ark-std/std", "ark-ec/std", "ark-poly/std", "ark-poly-commit/std"]
parallel = ["std", "rayon", "ark-ff/parallel", "ark-std/parallel", "ark-ec/parallel", "ark-poly/parallel", "ark-poly-commit/parallel"]

[dependencies]
rayon = { version = "1", optional = true }
merlin = { version = "2.0", default-features = false }
rand_core = { version = "0.5"}
rand_chacha = { version = "0.2", default-features = false }
digest= { version = "0.9.0", default-features = false }

ark-ff = { version = "0.2", default-features = false }
ark-ec = { version = "0.2", default-features = false }
ark-poly = {version = "0.2", default-features = false }
ark-serialize = { version = "0.2", default-features = false, features = [ "derive" ] }
ark-std = { version = "0.2", default-features = false }
ark-poly-commit = { version = "0.2", default-features = false }

[dev-dependencies]
blake2 = { version = "0.9", default-features = false }
ark-bls12-381 = { version = "0.2", default-features = false, features = [ "curve" ] }
