[package]
name = "scheme"
version = "0.1.0"
authors = ["SECBIT Labs"]
description = "implementation of the different zero-knowledge proof system schemes"
keywords = ["zero knowledge", "cryptography", "zkSNARK", "SNARK", "Groth"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = ["full"]
full = ["std", "groth16", "bulletproofs", "marlin", "clinkv2", "spartan", "asvc", "libra"]
std = ["math/std"]
parallel = ["std", "rayon", "math/parallel"]
groth16 = []
bulletproofs = ["merlin"]
marlin = ["rand_chacha", "merlin"]
clinkv2 = ["merlin", "digest"]
spartan = ["merlin"]
asvc = []
libra = ["merlin"]

[dependencies]
math = { path = "../math", default-features = false }
curve = { path = "../curve", default-features = false }
rand = { version = "0.7", default-features = false }
rand_core = { version = "0.5", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"]}
smallvec = "1.1.0"
rayon = { version = "1", optional = true }
merlin = { version = "2.0.0", default-features = false, optional = true }
rand_chacha = { version = "0.2.1", default-features = false, optional = true }
derivative = { version = "2", features = [ "use_core" ] }
digest = { version = "0.8", default-features = false, optional = true }

[dev-dependencies]
csv = { version = "1" }
rand = { version = "0.7" }
blake2 = { version = "0.8", default-features = false }
curve = { path = "../curve", default-features = false, features = [ "bls12_381", "bn_256", "sw6", "baby_jubjub", "curve25519" ] }
postcard = { version = "0.5", default-features = false, features = ["alloc"] }
