[package]
name = "zkp-spartan"
version = "0.1.0"
authors = ["SECBIT Labs"]
description = "a zero-knowledge proof scheme: spartan."
keywords = ["cryptography", "zkp", "zero-knowledge", "spartan"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = ["std"]
std = ["zkp-curve/std", "zkp-r1cs/std", "ark-ff/std", "ark-poly/std", "zkp-curve/std", "ark-std/std"]
parallel = ["std", "rayon", "zkp-curve/parallel", "zkp-r1cs/parallel", "ark-ff/parallel", "ark-poly/parallel", "ark-std/parallel"]

[dependencies]
merlin = { version = "2.0", default-features = false }
rand = { version = "0.7", default-features = false }
zkp-r1cs = { version = "0.1", path = "../r1cs", default-features = false }
zkp-curve = { version = "0.1", path = "../curve", default-features = false }
ark-ff = { version = "0.2", default-features = false }
ark-poly = {version = "0.2", default-features = false }
ark-serialize = { version = "0.2", default-features = false, features = [ "derive" ] }
ark-std = { version = "0.2", default-features = false }
rayon = { version = "1", optional = true }

[dev-dependencies]
zkp-curve25519 = { version = "0.1", path = "../curve25519", default-features = false }
ark-bls12-381 = { version = "0.2", default-features = false, features = [ "curve" ] }
