[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
blake2 = { version = "0.8", default-features = false }
ckb-zkp = { path = "../" }
ckb-tool = { git = "https://github.com/jjyr/ckb-tool.git", tag = "v0.1.2" }
ckb-testtool = { git = "https://github.com/jjyr/ckb-tool.git", tag = "v0.1.2" }

