[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
postcard = { version = "0.5", default-features = false, features = ["alloc"] }
blake2 = { version = "0.8", default-features = false }
ckb-zkp = { path = "../" }
ckb-tool = "0.2.2"
ckb-testtool = "0.2.2"

