[package]
name = "zkp-toolkit"
version = "0.1.0"
authors = ["SECBIT Labs"]
description = "A library for better use zero-knowledge proof"
keywords = ["cryptography", "zero-knowledge", "zkp", "gadget", "r1cs"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = ["full"]
full = ["std", "gadgets",
        "bn_256", "bls12_381", "jubjub", "baby_jubjub",
        "groth16", "bulletproofs", "marlin", "clinkv2", "spartan", "asvc", "libra", "hyrax"
]
parallel = ["std", "math/parallel", "curve/parallel", "scheme/parallel"]
std = ["math/std", "curve/std", "scheme/std"]
gadgets = []
bn_256 = ["curve/bn_256"]
bls12_381 = ["curve/bls12_381"]
jubjub = ["curve/jubjub"]
baby_jubjub = ["curve/baby_jubjub"]
groth16 = ["scheme/groth16"]
bulletproofs = ["scheme/bulletproofs"]
asvc = ["scheme/asvc"]
marlin = ["scheme/marlin"]
clinkv2 = ["scheme/clinkv2"]
spartan = ["scheme/spartan"]
hyrax = ["scheme/hyrax"]
libra = ["scheme/libra"]

[dependencies]
math = { path = "math", default-features = false }
curve = { path = "curve", default-features = false }
scheme = { path = "scheme", default-features = false }
rand = { version = "0.7", default-features = false }
byteorder = { version = "1", default-features = false }
blake2 = { version = "0.8", default-features = false }

[dev-dependencies]
rand = "0.7"
blake2s_simd = "0.5"
num-traits = { version = "0.2", default-features = false }
hex-literal = "0.2"
sha2 = "0.9"
postcard = { version = "0.5", default-features = false, features = ["alloc"] }
